--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <tr>
               <td>Card 1</td>
               <td> <div class="image-frame">
-              <img src="path/to/image.jpg" alt="Image description">
+              <img src="images.jpg" alt="Image description">
               </div></td>
 
               <td>18.99%</td>
@@ -38,7 +38,7 @@
             <tr>
               <td>Card 2</td>
               <td><div class="image-frame">
-              <img src="path/to/image.jpg" alt="Image description"></td>
+              <img src="card_prepaid_01.jpg" alt="Image description"></td>
               </div></td>
 
               <td>21.99%</td>
