--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
               <td>21.99%</td>
               <td>$75</td>
               <td>1% cashback</td>
-              <td><button>Apply Now</button></td>
+              <td><button onclick="showAlert()">Click me</button>
+              <script src="app.js"></script></td>
             </tr>
             <!-- More credit card rows -->
           </tbody>
