--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
     <header>
       <h1>Financial Product Comparison Landing Page</h1>
     </header>
-    <main>
+    <main><section class="about">
+          <h2>About Us</h2>
+          <p>Welcome to our company, the leading provider of credit cards in the industry! Our mission is to provide you with the tools and resources you need to manage your finances, build your credit, and achieve your financial goals.
+
+At our company, we believe that credit cards should be a tool for financial empowerment, not a burden. That's why we offer a wide range of credit cards with flexible terms, competitive rates, and valuable rewards programs to help you make the most of your spending.
+
+Whether you're looking for a cash-back card, a travel rewards card, or a card to help you build your credit history, we've got you covered. Our expert team is always here to help you find the perfect credit card for your unique needs and preferences.
+
+But our commitment to your financial success goes beyond just providing credit cards. We also offer a range of educational resources and tools to help you manage your finances, understand your credit score, and make smart financial decisions.
+
+So whether you're just starting out on your financial journey, or you're looking to take your credit and finances to the next level, we're here to help. Thank you for choosing us as your partner in financial empowerment, and we look forward to serving you!</p>
+      </section>
       <section id="credit-cards">
         <h2>Credit Cards</h2>
         <table>
